--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.reflections</groupId>
-    <artifactId>reflections</artifactId>
-    <version>0.9.12-SNAPSHOT</version>
+    <groupId>net.oneandone.reflections</groupId>
+    <artifactId>reflections8</artifactId>
+    <version>0.10.1-SNAPSHOT</version>
 
     <name>Reflections</name>
     <description>Reflections - a Java runtime metadata analysis</description>
@@ -53,17 +53,17 @@
 
     <properties>
         <guava.version>20.0</guava.version>
-        <javassist.version>3.21.0-GA</javassist.version>
-        <jdk.version>1.7</jdk.version>
+        <javassist.version>3.22.0-GA</javassist.version>
+        <jdk.version>1.8</jdk.version>
         <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
 
     <dependencies>
-        <dependency>
+        <!--dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>org.javassist</groupId>
@@ -87,13 +87,18 @@
             <optional>true</optional> <!-- case: when no xml de/serialization -->
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.0</version>
-            <optional>true</optional> <!-- case: when no json de/serialization -->
-        </dependency>
+            <optional>true</optional>
+        </dependency-->
 
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.2</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
@@ -110,12 +115,12 @@
             <optional>true</optional> <!-- case: when other logging implementation used or logging is not needed -->
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <version>3.0.1</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>junit</groupId>
