--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.oneandone.reflections</groupId>
+    <groupId>net.oneandone.reflections8</groupId>
     <artifactId>reflections8</artifactId>
     <version>0.10.1-SNAPSHOT</version>
 
-    <name>Reflections</name>
-    <description>Reflections - a Java runtime metadata analysis</description>
+    <name>Reflections8</name>
+    <description>Reflections8 - a Java runtime metadata analysis without guava on Java 8</description>
     <url>http://github.com/aschoerk/reflections</url>
 
     <licenses>
@@ -22,9 +22,12 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/aschoerk/reflections/issues</url>
-        <connection>scm:git:git://github.com/aschoerk/reflections.git</connection>
+        <url>https://github.com/aschoerk/reflections</url>
+        <connection>scm:git:ssh://git@github.com/aschoerk/reflections.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/aschoerk/reflections.git</developerConnection>
+        <tag>HEAD</tag>
     </scm>
+
 
     <issueManagement>
         <url>https://github.com/aschoerk/reflections/issues</url>
@@ -34,15 +37,22 @@
 
     <developers>
         <developer>
-            <email>aschoerk at gmx.net</email>
+            <name>Andreas Schörk</name>
+            <email>andreas.schoerk@1and1.com</email>
+            <organization>1and1</organization>
+            <organizationUrl>http://www.1and1.com</organizationUrl>
         </developer>
     </developers>
 
     <distributionManagement>
         <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <id>sonatype-nexus-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
+        <!--repository>
+            <id>sonatype-nexus-staging</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository-->
     </distributionManagement>
 
     <properties>
