introduce staging repo

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <javassist.version>3.22.0-GA</javassist.version>
         <jdk.version>1.8</jdk.version>
         <additionalparam>-Xdoclint:none</additionalparam>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     </properties>
 
     <dependencies>
@@ -213,6 +214,20 @@
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven-release-plugin.version}</version>
+                <inherited>true</inherited>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.9.2</version>
+                    </dependency>
+                </dependencies>
+
             </plugin>
         </plugins>
     </build>
