Fix for JBoss VFS that is broken on latest JDK, support for jrt file system
- workaround for https://issues.redhat.com/browse/WFLY-16322
- added support for jrt://java.base/ URL

--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,13 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-vfs</artifactId>
+            <version>3.2.17.Final</version>
+            <scope>provided</scope>
+            <optional>true</optional><!-- case: when using jboss-vfs -->
+        </dependency>
     </dependencies>
 
     <profiles>
