--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.oneandone.reflections8</groupId>
-    <artifactId>reflections8</artifactId>
-    <version>0.11.6</version>
+    <groupId>org.reflections17</groupId>
+    <artifactId>reflections17</artifactId>
+    <version>1.0.2</version>
 
-    <name>Reflections8</name>
-    <description>Reflections8 - a Java runtime metadata analysis without guava on Java 8</description>
-    <url>http://github.com/aschoerk/reflections8</url>
+    <name>Reflections17</name>
+    <description>Reflections17 - a Java runtime metadata analysis component</description>
 
     <licenses>
         <license>
@@ -21,18 +20,16 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/aschoerk/reflections8</url>
-        <connection>scm:git:ssh://git@github.com/aschoerk/reflections8.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/aschoerk/reflections8.git</developerConnection>
-        <tag>v0.11.6</tag>
+        <url>https://github.com/martinhickson/reflections8</url>
+        <connection>git@github.com:martinhickson/reflections8.git</connection>
+        <developerConnection>git@github.com:martinhickson/reflections8.git</developerConnection>
+        <tag>v1.0.2</tag>
     </scm>
 
-
     <issueManagement>
-        <url>https://github.com/aschoerk/reflections8/issues</url>
+        <url>https://github.com/martinhickson/reflections8/issues</url>
         <system>GitHub Issues</system>
     </issueManagement>
-
 
     <developers>
         <developer>
@@ -64,7 +61,6 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
